--- a/config/imu_filter_madgwick.yaml
+++ b/config/imu_filter_madgwick.yaml
@@ -3,7 +3,7 @@ orientation_stddev: 0.001
 gain: 0.1
 zeta: 0.001
 
-publish_tf: false
+publish_tf: true
 
 # REP103: For ENU type IMUs, the orientation of the world frame is x-east, y-north, z-up, relative to magnetic north.
 world_frame: enu
