--- a/config/imu_node.yaml
+++ b/config/imu_node.yaml
@@ -1,4 +1,3 @@
-                        # x       y        z            
-linear_accel_offset:    [0.25,  -0.03,  -0.47]
-angular_vel_offset:     [0,         0,      0]
-magnetic_field_offset:  [0,         0,      0]
+linear_accel_offset:    {'x': 0.25, 'y': -0.03, 'z': -0.47}
+angular_vel_offset:     {'x': 0,    'y': 0,     'z': 0}
+magnetic_field_offset:  {'x': 0,    'y': 0,     'z': 0}
